--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="css/style.css" />
+<link rel="stylesheet" type="text/css" href="stylesheets/my-css.css">
 </head>
 
 <body>
@@ -30,6 +30,6 @@
     <p id="title">To achieve clientele fidelity, first you need to create trust and a psychological bonding by understanding the other person needs and wants. It's very important to have empathy on a non-transactional relationship where the common ground is to only give if you can take something back. Reason No.1 why this may be the most important principle in sales is because we as humans have a tendency of behaving under an emotional level, which means people buy in order to seek pleasure -or- to escape pain.</p>
     </div>
 </div>
- 
+ </div>
  </body>
 </html>
